test/tests/stages/18_structures/invalid_types/initializers/static_initializer_too_long.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: pair
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
          CMemberDeclaration: 
            TIdentifier: b
            Int: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: p
        CCompoundInit: 
          List[3]: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 1
                None: 
              None: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 2
                None: 
              None: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 3
                None: 
              None: 
          None: 
        Structure: 
          TIdentifier: pair
          Bool: 0
        None: 
